--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="main">
       <div class="white">
         <img
-          src="/images/image-qr-code.png"
+          src="./images/image-qr-code.png"
           alt="QR Code"
           height="288px"
           width="288px"
