--- a/index.html
+++ b/index.html
@@ -30,26 +30,30 @@
     </style>
   </head>
   <body>
-    <div class="main">
-      <div class="white">
-        <img
-          src="./images/image-qr-code.png"
-          alt="QR Code"
-          height="288px"
-          width="288px"
-        />
-        <h1>Improve your front-end skills by building projects</h1>
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
+    <main>
+      <div class="container">
+        <div class="white">
+          <img
+            src="./images/image-qr-code.png"
+            alt="QR Code"
+            height="288px"
+            width="288px"
+          />
+          <h1>Improve your front-end skills by building projects</h1>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding skills
+            to the next level
+         </p>
+        </div>
       </div>
-    </div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Patryssia-P</a>.
-    </div>
+    </main>
+    <footer>
+      <div class="attribution">
+       Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+         >Frontend Mentor</a
+       >. Coded by <a href="#">Patryssia</a>.
+      </div>
+    </footer>
   </body>
 </html>
