--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
         <div class="white">
           <img
             src="./images/image-qr-code.png"
-            alt="QR Code"
-            height="288px"
-            width="288px"
-          />
+            alt="QR Code"/>
           <h1>Improve your front-end skills by building projects</h1>
           <p>
             Scan the QR code to visit Frontend Mentor and take your coding skills
